Finish presentation. Add lots of figures

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- Presentation metadata -->
-    <title>AFQ-Projects</title>
+    <title>AFQ-Suite</title>
     <meta name="description" content="This presentation describes the AFQ software suite and is designed as a software demonstration to accompany poster presentations at the 2019 OHBM conference.">
     <meta name="author" content="Adam Richie-Halford">
     <!-- reveal.js CSS -->
     <link rel="stylesheet" href="css/reveal.css">
     <!-- The id attribute must be defined for the reveal.js-menu themes panel -->
-    <link rel="stylesheet" href="css/theme/moon.css" id="theme">
+    <link rel="stylesheet" href="css/theme/white.css" id="theme">
     <!-- Devicons CSS -->
     <link rel="stylesheet" href="css/devicons.min.css">
     <!-- Font Awesome CSS -->
@@ -35,22 +35,17 @@
     <div class="reveal">
       <div class="slides">
         <section>
-          <h2>AFQ-Suite</h2>
-          <p>Software for the preprocessing, analysis, visualization, and sharing of diffusion MRI data</p>
-          <p>Adam Richie-Halford, University of Washington,<br>Department of Physics</p>
+          <h1>The AFQ Suite</h1>
+          <h3>Software for preprocessing, analysis, visualization, and sharing of diffusion MRI data</h3>
+          <p>Adam Richie-Halford, University of Washington<br>
+          Department of Physics</p>
         </section>
-
-        <section id="tractometry" data-external="sections/tractometry.html"></section>
-        <section id="dmriprep" data-external="sections/dmriprep.html"></section>
-        <section id="pyafq" data-external="sections/pyafq.html"></section>
-        <section id="browser" data-external="sections/browser.html"></section>
-        <section id="insight" data-external="sections/insight.html"></section>
 
         <section id="thanks">
           <h2>Thank you!</h2>
           <div class="row">
             <div class="imgpenta imgcite">
-              <img style="margin: 0px;" class="logo" src="img/people/ariel.jpg" height="150">
+              <img style="margin: 0px;" class="logo" src="img/people/ariel.jpg" height="250">
               <cite>
                 Ariel Rokem
                 <br>
@@ -58,7 +53,7 @@
               </cite>
             </div >
             <div class="imgpenta imgcite">
-              <img style="margin: 0px;" class="logo" src="img/people/jason.jpg" height="150">
+              <img style="margin: 0px;" class="logo" src="img/people/jason.jpg" height="250">
               <cite>
                 Jason Yeatman
                 <br>
@@ -66,7 +61,7 @@
               </cite>
             </div>
             <div class="imgpenta imgcite">
-              <img style="margin: 0px;" class="logo" src="img/people/anisha.jpg" height="150">
+              <img style="margin: 0px;" class="logo" src="img/people/anisha.jpg" height="250">
               <cite>
                 Anisha Keshavan
                 <br>
@@ -74,7 +69,7 @@
               </cite>
             </div>
             <div class="imgpenta imgcite">
-              <img style="margin: 0px;" class="logo" src="img/people/josh.png" height="150">
+              <img style="margin: 0px;" class="logo" src="img/people/josh.png" height="250">
               <cite>
                 Josh Smith
                 <br>
@@ -82,7 +77,7 @@
               </cite>
             </div>
             <div class="imgpenta imgcite">
-              <img style="margin: 0px;" class="logo" src="img/people/noah.jpg" height="150">
+              <img style="margin: 0px;" class="logo" src="img/people/noah.jpg" height="250">
               <cite>
                 Noah Simon
                 <br>
@@ -113,6 +108,12 @@
             Built with <a href="https://github.com/keimlink/cookiecutter-reveal.js">cookiecutter-reveal.js</a>, <a href="https://github.com/hakimel/reveal.js">reveal.js</a>, <a href="https://github.com/denehyg/reveal.js-menu">reveal.js-menu</a>, <a href="https://fontawesome.com/">Font Awesome</a> and <a href="https://github.com/vorillaz/devicons">devicons</a>.
           </p>
         </section>
+
+        <section id="dmri" data-external="sections/tractometry.html"></section>
+        <section id="dmriprep" data-external="sections/dmriprep.html"></section>
+        <section id="pyafq" data-external="sections/pyafq.html"></section>
+        <section id="browser" data-external="sections/browser.html"></section>
+        <section id="insight" data-external="sections/insight.html"></section>
       </div>
     </div>
     <script src="lib/js/head.min.js"></script>
@@ -122,6 +123,9 @@
       // - https://github.com/hakimel/reveal.js#configuration
       // - https://github.com/hakimel/reveal.js#dependencies
       Reveal.initialize({
+        width: 1920,
+        height: 1080,
+        margin: 0.1,
         history: true,
         math: {
           mathjax: 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js',
@@ -135,14 +139,27 @@
           { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
           // Zoom in and out with Alt+click
           { src: 'plugin/zoom-js/zoom.js', async: true },
-          { src: 'third_party_plugins/menu.js' },
+          // { src: 'third_party_plugins/menu.js' },
+          { src: 'node_modules/reveal.js-menu/menu.js' },
           { src: 'third_party_plugins/external.js', condition: function() { return !!document.querySelector( '[data-external]' ); } },
         ],
         menu: {
+          side: 'left',
+          width: 'normal',
+          numbers: false,
+          titleSelector: 'notanelement',
+          useTextContentForMissingTitles: false,
+          hideMissingTitles: true,
+          markers: true,
+          custom: false,
           themes: true,
-          transitions: true,
-          openButton: false,
-          loadIcons: false
+          themesPath: 'css/theme/',
+          transitions: false,
+          openButton: true,
+          openSlideNumber: false,
+          keyboard: true,
+          sticky: false,
+          loadIcons: true
         }
       });
     </script>
