--- a/sections/browser.html
+++ b/sections/browser.html
@@ -1,9 +1,95 @@
-<section>
-  <h2>AFQ-Browser</h2>
-  <h3>Exploratory data analysis, visualization, and sharing</h3>
+<section data-menu-title="Visualization and sharing">
+  <h1>AFQ-Browser</h1>
+  <h2>Exploratory analysis, visualization, and sharing</h2>
   <aside class="notes" data-markdown>
     <textarea data-template>
       * Put your speaker notes here.
     </textarea>
   </aside>
+</section>
+
+<section>
+  <h2>Challenge</h2>
+  <div class="row">
+    <div class="col-13" style="text-align: left;">
+      <p>Results from large multi-dimensional datasets are hard to</p>
+      <ul>
+        <li>understand</li>
+        <li>communicate</li>
+        <li>reproduce</li>
+        <li>share</li>
+      </ul>
+      <div class="fragment">
+        <p>Solution: a tool for exploratory data analysis (EDA), with data sharing built-in!</p>
+        <ul>
+          <li>A web-based application</li>
+          <li>Leverages modern visualization frameworks</li>
+          <li>Builds a web-site for a diffusion MRI dataset</li>
+          <li>Automatically uploads the website to GitHub</li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-23 imgcite" style="margin: auto;">
+      <p><a href="https://yeatmanlab.github.io/Sarica_2017">https://yeatmanlab.github.io/Sarica_2017</a></p>
+      <video width="1200" autoplay loop>
+        <source src="./img/afq-browser-demo.mp4">
+      </video>
+      <cite>
+        <a href="https://www.nature.com/articles/s41467-018-03297-7">Yeatman, Richie-Halford, Smith, Keshavan & Rokem (2018), Nature Communications</a>
+      </cite>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Automatic data sharing</h2>
+  <div class="imgcite">
+    <img src="./img/afq-browser-static.png" height="800px">
+    <svg class="fragment" data-fragment-index="1" width="800" height="110"  style="position: absolute; left:875px; top:855px;">
+      <rect rx="10" ry="10" width="300" height="80" style="fill:yellow;stroke-width:3;stroke:rgb(1,0,0);opacity:0.4;" />
+    </svg>
+    <svg class="fragment" data-fragment-index="3" width="400" height="110"  style="position: absolute; left:1555px; top:225px;">
+      <rect rx="10" ry="10" width="100" height="80" style="fill:yellow;stroke-width:3;stroke:rgb(1,0,0);opacity:0.4;" />
+    </svg>
+    <p class="fragment" data-fragment-index="2">
+    <a href="http://afqvault.org">http://afqvault.org</a>
+    </p>
+    <cite class="fragment">
+      <a href="https://www.nature.com/articles/s41467-018-03297-7">Yeatman, Richie-Halford, Smith, Keshavan & Rokem (2018), Nature Communications</a>
+    </cite>
+  </div>
+</section>
+
+
+<section>
+  <h2>Further exploration</h2>
+  <div class="imgcite">
+    <video width="1500" autoplay loop>
+      <source src="./img/afq-browser-binder-demo.mp4">
+    </video>
+    <cite>
+      <a href="https://www.nature.com/articles/s41467-018-03297-7">Yeatman, Richie-Halford, Smith, Keshavan & Rokem (2018), Nature Communications</a>
+    </cite>
+  </div>
+</section>
+
+<section>
+  <h2>AFQ-Browser Summary</h2>
+  <div style="text-align: left">
+    <p>Exploratory data analysis</p>
+    <ul>
+      <li>Enhances published results</li>
+      <li>Linked visualizations facilitate easy exploration</li>
+      <li>Enables new discoveries in old datasets</li>
+    </ul>
+    <p>Data sharing facilitates interdisciplinary collaboration</p>
+    <ul>
+      <li>Dimensionality reduced data in tidy table format</li>
+      <li>Facilitates interdisciplinary collaboration</li>
+    </ul>
+    <br>
+    <cite class="smaller">
+      <a href="https://www.nature.com/articles/s41467-018-03297-7">Yeatman, Richie-Halford,  Smith, Keshavan & Rokem (2018), Nature Communications</a>
+    </cite>
+  </div>
 </section>
